# hadronic_afterburner_toolkit

./: .gitignore  CMakeLists.txt  README.md  compile.sh  formatCode.sh
ebe_scripts/: analysis_multi_particle_correlation_oversample_UrQMDevent.py  analysis_multi_particle_correlation_within_UrQMDevent.py  analysis_multi_particle_correlation_within_UrQMDevent_h5.py  analysis_multi_particle_correlation_within_UrQMDevent_h5_minimumbias.py  analysis_three_particle_correlation.py  analyze_longitudinal_flow_correlations.py  average_event_HBT_correlation_function.py  average_event_HBT_correlation_function_h5.py  average_event_balance_function.py  average_event_balance_function_h5.py  average_event_dNdx_h5.py  average_event_distribution.py  average_event_eccn_ep_corr_h5.py  average_event_photon_h5_minimumbias.py  average_event_spectra_and_vn.py  average_event_spin_h5_minimumbias.py  average_event_spvn.py  average_event_spvn_h5.py  average_event_spvn_h5_minimumbias.py  average_event_spvn_pure_hydro.py  average_event_spvn_unitweight.py  calculate_rhon.py  collect_events.sh  collect_events_BalanceFunction.sh  collect_events_HBT.sh  collect_events_JAM.sh  collect_events_OSCAR.sh  collect_events_UrQMD.sh  collect_events_distribution.sh  collect_events_spvn.sh  collect_events_spvn_purehydro.sh  combine_results_into_hdf5.py  concatenate_binary_files.cpp  convert_to_binary.cpp  convert_to_binary_SMASH.cpp  copy_UrQMD_events_from_Sangwook.sh  extract_event_plane_correlations.py  extract_integrated_observables.sh  extract_nonlinear_response.sh  fit_HBT_radii.py  (+11 more)
src/: Analysis.cpp  Analysis.h  BalanceFunction.cpp  BalanceFunction.h  CMakeLists.txt  GNUmakefile  HBT_correlation.cpp  HBT_correlation.h  ParameterReader.cpp  ParameterReader.h  Random.cpp  Random.h  Stopwatch.h  arsenal.cpp  arsenal.h  histogram.cpp  histogram.h  main.cpp  parameters.h  particleSamples.cpp  particleSamples.h  particle_decay.cpp  particle_decay.h  particle_info.h  particle_yield_distribution.cpp  particle_yield_distribution.h  pretty_ostream.cpp  pretty_ostream.h  single_particleSpectra.cpp  single_particleSpectra.h
src/tests/: test_read_binary.cpp
unit_tests/: Analysis_unittest.cc  CMakeLists.txt  HBT_unittest.cc  histogram_unittest.cc  particleSamples_unittest.cc
